--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Rye&family=Newsreader:opsz,wght@6..72,300;400;600;800&family=Special+Elite&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Cinzel+Decorative:wght@400;700;900&family=Cormorant+Garamond:ital,wght@0,300;0,400;0,600;1,400&family=Montserrat:wght@300;400;600&display=swap');
 
 /* Tailwind base utilities */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-/* Cyberpunk design system */
+/* TERA Dark Fantasy design system */
 @import './style.css';
